
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


typedef int u16 ;
struct sk_buff {int cb; int protocol; int pkt_type; int ip_summed; int dev; } ;
struct mac80211_hwsim_data {int dummy; } ;
struct ieee80211_tx_info {int dummy; } ;
struct ieee80211_rate {int bitrate; int flags; } ;
struct ieee80211_hw {struct mac80211_hwsim_data* priv; } ;
struct ieee80211_channel {int center_freq; } ;
struct TYPE_2__ {int it_present; void* it_len; scalar_t__ it_pad; int it_version; } ;
struct hwsim_radiotap_hdr {int rt_rate; void* rt_chbitmask; void* rt_channel; scalar_t__ rt_flags; int rt_tsft; TYPE_1__ hdr; } ;


 int CHECKSUM_UNNECESSARY ;
 int ETH_P_802_2 ;
 int GFP_ATOMIC ;
 int IEEE80211_CHAN_2GHZ ;
 int IEEE80211_CHAN_CCK ;
 int IEEE80211_CHAN_OFDM ;
 int IEEE80211_RADIOTAP_CHANNEL ;
 int IEEE80211_RADIOTAP_FLAGS ;
 int IEEE80211_RADIOTAP_RATE ;
 int IEEE80211_RADIOTAP_TSFT ;
 int IEEE80211_RATE_ERP_G ;
 struct ieee80211_tx_info* IEEE80211_SKB_CB (struct sk_buff*) ;
 int PACKET_OTHERHOST ;
 int PKTHDR_RADIOTAP_VERSION ;
 scalar_t__ WARN_ON (int) ;
 int __mac80211_hwsim_get_tsf (struct mac80211_hwsim_data*) ;
 void* cpu_to_le16 (int) ;
 int cpu_to_le32 (int) ;
 int htons (int ) ;
 int hwsim_mon ;
 struct ieee80211_rate* ieee80211_get_tx_rate (struct ieee80211_hw*,struct ieee80211_tx_info*) ;
 int memset (int ,int ,int) ;
 int netif_running (int ) ;
 int netif_rx (struct sk_buff*) ;
 struct sk_buff* skb_copy_expand (struct sk_buff*,int,int ,int ) ;
 struct hwsim_radiotap_hdr* skb_push (struct sk_buff*,int) ;
 int skb_reset_mac_header (struct sk_buff*) ;

__attribute__((used)) static void mac80211_hwsim_monitor_rx(struct ieee80211_hw *hw,
          struct sk_buff *tx_skb,
          struct ieee80211_channel *chan)
{
 struct mac80211_hwsim_data *data = hw->priv;
 struct sk_buff *skb;
 struct hwsim_radiotap_hdr *hdr;
 u16 flags;
 struct ieee80211_tx_info *info = IEEE80211_SKB_CB(tx_skb);
 struct ieee80211_rate *txrate = ieee80211_get_tx_rate(hw, info);

 if (WARN_ON(!txrate))
  return;

 if (!netif_running(hwsim_mon))
  return;

 skb = skb_copy_expand(tx_skb, sizeof(*hdr), 0, GFP_ATOMIC);
 if (skb == ((void*)0))
  return;

 hdr = skb_push(skb, sizeof(*hdr));
 hdr->hdr.it_version = PKTHDR_RADIOTAP_VERSION;
 hdr->hdr.it_pad = 0;
 hdr->hdr.it_len = cpu_to_le16(sizeof(*hdr));
 hdr->hdr.it_present = cpu_to_le32((1 << IEEE80211_RADIOTAP_FLAGS) |
       (1 << IEEE80211_RADIOTAP_RATE) |
       (1 << IEEE80211_RADIOTAP_TSFT) |
       (1 << IEEE80211_RADIOTAP_CHANNEL));
 hdr->rt_tsft = __mac80211_hwsim_get_tsf(data);
 hdr->rt_flags = 0;
 hdr->rt_rate = txrate->bitrate / 5;
 hdr->rt_channel = cpu_to_le16(chan->center_freq);
 flags = IEEE80211_CHAN_2GHZ;
 if (txrate->flags & IEEE80211_RATE_ERP_G)
  flags |= IEEE80211_CHAN_OFDM;
 else
  flags |= IEEE80211_CHAN_CCK;
 hdr->rt_chbitmask = cpu_to_le16(flags);

 skb->dev = hwsim_mon;
 skb_reset_mac_header(skb);
 skb->ip_summed = CHECKSUM_UNNECESSARY;
 skb->pkt_type = PACKET_OTHERHOST;
 skb->protocol = htons(ETH_P_802_2);
 memset(skb->cb, 0, sizeof(skb->cb));
 netif_rx(skb);
}
